--- a/myOrders.html
+++ b/myOrders.html
@@ -18,46 +18,47 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <link rel="stylesheet" href="/css/navbar.css">
-    <link rel="stylesheet" href="/css/check.css">
+    <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/check.css">
 </head>
 
 <body class="bg-black">
     <div class="page">
         <!-- Start Navbar -->
-    <nav class="navbar navbar-expand-lg ">
-        <div class="container">
-          <a href="index.html" class="navbar-brand">
-            <!-- <img alt="" src="./images/icon.png" /> -->
-  
-            <span class="logo">Cafetria</span>
-          </a>
-  
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse text-center " id="navbarSupportedContent">
-            <ul class="navbar-nav mb-2 mx-auto mb-lg-0 text-white">
-              <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="userHome.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="myOrders.html">My Orders</a>
-              </li>
-             
-            </ul>
-            <div class="d-flex align-items-center">
-              <div>
-                <img id="user_img" src="" class="rounded-5" alt="" srcset="" width="40px" height="40px">
-              </div>
-              <span id="user_name" class="text-white mx-3 name"></span>
-              <button class="btn btn-primary" type="submit" id="log_out_btn">Log Out</button>
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container">
+                <a href="index.html" class="navbar-brand">
+                    <!-- <img alt="" src="./images/icon.png" /> -->
+
+                    <span class="logo">Cafetria</span>
+                </a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse text-center " id="navbarSupportedContent">
+                    <ul class="navbar-nav mb-2 mx-auto mb-lg-0 text-white">
+                        <li class="nav-item">
+                            <a class="nav-link " aria-current="page" href="userHome.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="myOrders.html">My Orders</a>
+                        </li>
+
+                    </ul>
+                    <div class="d-flex align-items-center">
+                        <div>
+                            <img id="user_img" src="" class="rounded-5" alt="" srcset="" width="40px" height="40px">
+                        </div>
+                        <span id="user_name" class="text-white mx-3 name"></span>
+                        <button class="btn btn-primary" type="submit" id="log_out_btn">Log Out</button>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-  
-      </nav>
+
+        </nav>
         <!-- End Navbar -->
 
         <!-- checks -->
@@ -95,49 +96,48 @@
                 </div>
             </div>
 
-                <div class="table-responsive rounded">
-                    <table class="fold-table rounded">
-                        <thead>
-                            <tr>
-                                <th></th>
-                                <th>Order Date</th>
-                                <th>Status</th>
-                                <th>Amount</th>
-                                <th>Action</th>
-                            </tr>
-                        </thead>
-                        <tbody id="table-data">
-                        </tbody>
-                    </table>
-                </div>
+            <div class="table-responsive rounded">
+                <table class="fold-table rounded">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>Order Date</th>
+                            <th>Status</th>
+                            <th>Amount</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody id="table-data"></tbody>
+                </table>
             </div>
         </div>
+    </div>
 
-        <div class="pagination-div container d-flex justify-content-center">
-            <nav aria-label="Page navigation example">
-                <ul class="pagination" id="pagination">
+    <div class="pagination-div container d-flex justify-content-center">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination" id="pagination">
 
-                </ul>
-            </nav>
-        </div>
+            </ul>
+        </nav>
+    </div>
 
-        <!-- Start Footer -->
-        <footer class="py-4 bg-black text-white">
-            <div class="container d-flex justify-content-between align-items-center">
-                <div class="d-flex footer-text">
-                    <p>@Copyright 2022 - Stradate by Cafe Team</p>
-                </div>
-
-                <div class="footer-i">
-
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-twitter"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-linkedin-in"></i>
-                </div>
+    <!-- Start Footer -->
+    <footer class="py-4 bg-black text-white">
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="d-flex footer-text">
+                <p>@Copyright 2022 - Stradate by Cafe Team</p>
             </div>
-        </footer>
-        <!-- End Footer -->
+
+            <div class="footer-i">
+
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-linkedin-in"></i>
+            </div>
+        </div>
+    </footer>
+    <!-- End Footer -->
     </div>
     </section>
 
