--- a/tableCheck.html
+++ b/tableCheck.html
@@ -79,8 +79,6 @@
                   </div>
               </div> -->
 
-
-
         </div>
       </div>
     </div>
@@ -96,7 +94,6 @@
                     <form>
                         <div class="row form-group">
                             <div class="col-md-6">
-
                                 <div class="col-md-10">
                                     <div class="form-floating input-group mb-4">
                                         <i class="bi bi-calendar-date input-group-text"></i>
@@ -129,7 +126,6 @@
                             </div>
                         </div>
                     </form>
-
                 </div>
             </div>
 
@@ -146,10 +142,6 @@
                     </tbody>
                 </table>
             </div>
-            <!-- </td>
-            </tr> -->
-            <!-- </tbody>
-                </table> -->
         </div>
     </div>
 
@@ -160,13 +152,7 @@
             </ul>
         </nav>
     </div>
-    <!-- <div class="pagination bg-black d-flex justify-content-center pt-3">
-      <nav aria-label="Page navigation example">
-        <ul class="pagination" id="pagination">
 
-        </ul>
-      </nav>
-    </div> -->
 
     <!-- Start Footer -->
     <footer class="py-4 bg-black text-white">
@@ -195,12 +181,9 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/js/bootstrap.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/js/datepicker-full.min.js'></script>
     <script id="rendered-js">
-        /* Bootstrap 5 JS included */
-        /* vanillajs-datepicker 1.1.4 JS included */
 
         const getDatePickerTitle = elem => {
-            // From the label or the aria-label
-            const label = elem.nextElementSibling;
+          const label = elem.nextElementSibling;
             let titleText = '';
             if (label && label.tagName === 'LABEL') {
                 titleText = label.textContent;
@@ -213,7 +196,7 @@
         const elems = document.querySelectorAll('.datepicker_input');
         for (const elem of elems) {
             const datepicker = new Datepicker(elem, {
-                'format': 'dd/mm/yyyy', // UK format
+                'format': 'dd/mm/yyyy',
                 title: getDatePickerTitle(elem)
             });
 
