--- a/all_product.html
+++ b/all_product.html
@@ -176,7 +176,7 @@
                       <input type="text" name="img" class="form-control" value="" id="imageName"
                         aria-label="Recipient's username" aria-describedby="button-upload">
                       <button class="btn btn-outline-secondary btn-file" type="button"><i class="fa fa-cloud-arrow-up">
-                          <input id="button-upload" type='file' class="file" /></i>
+                          <input id="button-upload" type='file' class="file" name="realImg" /></i>
                       </button>
                     </div>
                   </div>
