--- a/all_users.html
+++ b/all_users.html
@@ -149,7 +149,7 @@
                     <input type="text" name="imageName" class="form-control" value="" id="imageName"
                       aria-label="Recipient's username" aria-describedby="button-upload">
                     <button class="btn btn-outline-secondary btn-file" type="button"><i class="fa fa-cloud-arrow-up">
-                        <input id="button-upload" type='file' class="file" /></i>
+                        <input id="button-upload" type='file' class="file" name="userImg" /></i>
                     </button>
                   </div>
                 </div>
