--- a/addUser.html
+++ b/addUser.html
@@ -1,100 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
-      integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Register</title>
-  </head>
 
-  <body>
-    <section class="login">
-      <div class="login_backimg">
-        <div class="overlay d-flex justify-content-center align-items-center">
-          <div class="form text-white p-5 col-md-6">
-            <form
-              action="Register.php"
-              method="post"
-              enctype="multipart/form-data"
-              class="d-flex flex-wrap col-12"
-            >
-              <div class="mb-3 col-md-6 px-2">
-                <label for="username" class="form-label">User Name</label>
-                <input type="text" name="username" class="form-control" />
-                <p class="invalid-feedback"></p>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/userHome.css" />
+  <link rel="stylesheet" href="css/navbar.css">
+</head>
+
+<body class="bg-black">
+  <div class="bg-black text-white">
+    <!-- Start Navbar -->
+    <nav class="navbar navbar-expand-lg ">
+      <div class="container">
+        <a href="index.html" class="navbar-brand">
+          <!-- <img alt="" src="./images/icon.png" /> -->
+
+          <span class="logo">Cafetria</span>
+        </a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse text-center " id="navbarSupportedContent">
+          <ul class="navbar-nav mb-2 mx-auto mb-lg-0 text-white">
+            <li class="nav-item">
+              <a class="nav-link " aria-current="page" href="userHome.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="myOrders.html">My Orders</a>
+            </li>
+
+          </ul>
+          <div class="d-flex align-items-center">
+            <div>
+              <img id="user_img" src="" class="rounded-5" alt="" srcset="" width="40px" height="40px">
+            </div>
+            <span id="user_name" class="text-white mx-3 name"></span>
+            <button class="btn btn-primary" type="submit" id="log_out_btn">Log Out</button>
+          </div>
+        </div>
+      </div>
+
+    </nav>
+    <!-- search -->
+    <section class="col-md-12">
+      <div class="container">
+        <div class="d-flex justify-content-start  py-5 col-12 col-md-6">
+          <input onkeyup="search()" name="word" class="form-control" type="search" placeholder="Search"
+            aria-label="Search" />
+        </div>
+
+        <div class="row col-md-12">
+          <div class="container">
+            <div class="row col-md-12">
+              <div class="row col-md-8 pt-4 mx-0 mx-md-0" id="search">
+
               </div>
-              <div class="mb-3 col-md-6 px-2">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" name="email" class="form-control" />
-                <p class="invalid-feedback"></p>
+              <div class="col-md-4">
+
               </div>
-              <div class="mb-3 col-md-6 px-2">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" name="password" class="form-control" />
-                <p class="invalid-feedback"></p>
-              </div>
-              <div class="mb-3 col-md-6 px-2">
-                <label for="conpassword" class="form-label"
-                  >Confirm Password</label
-                >
-                <input
-                  type="password"
-                  name="conpassword"
-                  class="form-control"
-                />
-                <p class="invalid-feedback"></p>
-              </div>
-              <div class="mb-3 col-md-12 px-2">
-                <label for="roomNum" class="form-label">Room Number</label>
-                <input
-                  type="number"
-                  name="roomNum"
-                  min="1"
-                  max="200"
-                  class="form-control"
-                />
-                <p class="invalid-feedback"></p>
-              </div>
-              <div class="mb-3 col-md-12 px-2">
-                <label for="image" class="form-label">Choose Image</label>
-                <input type="file" name="image" class="form-control" />
-                <p class="invalid-feedback"></p>
-              </div>
-              <div class="d-flex col-md-12 justify-content-end">
-                <button type="submit" class="btn">Submit</button>
-                <button type="reset" class="btn">Reset</button>
-              </div>
-             
-            </form>
+
+            </div>
           </div>
         </div>
       </div>
     </section>
 
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"
-      integrity="sha512-wT7uPE7tOP6w4o28u1DN775jYjHQApdBnib5Pho4RB0Pgd9y7eSkAV1BTqQydupYDB9GBhTcQQzyNMPMV3cAew=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./js/RegisterCookie.js"></script>
-  </body>
+    <section>
+      <div class="container">
+        <div class="col-md-12 row   pb-5">
+          <div class="col-md-12 ">
+            <h3 id="hide4">Latest Order</h3>
+          </div>
+          <div class="row col-md-12 justify-content-end mx-auto mx-md-0 py-5" style="min-height: 60vh;">
+            <div id="hide" class="col-md-8">
+              <div class="row col-md-12" id="row1"></div>
+            </div>
+            <div class="table-div col-md-4 border mt-5 ">
+              <h4 class="text-black mt-3 fw-bold text-center add w-50 mx-auto pb-3">Add To Cart</h4>
+              <table class="table text-center mt-4" style="overflow-y: scroll;">
+                <thead>
+                  <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Total Price</th>
+                    <th></th>
+                  </tr>
+                </thead>
+                <tbody id="tbody"></tbody>
+              </table>
+
+              <div class="order-section">
+                <div class="col-md-12">
+                  <label for="" class="py-2 text-black">Notes</label>
+                  <textarea id="notes" class="w-100"></textarea>
+                </div>
+                <div class="col-md-12">
+                  <label for="checkBox" class="form-label py-2 text-black">Room</label>
+                  <select class="form-select" id="checkBox" required>
+                    <option selected value="">Choose...</option>
+                  </select>
+                </div>
+
+                <div class="mt-2">
+                  <h2>Total price</h2>
+                  <h3><span id="total-price">0</span><span>$</span></h3>
+                </div>
+
+                <div>
+                  <button onclick="submitOrder()" id="submit-order" disabled
+                    class="btn btn-dark my-3 float-end confirm">
+                    Confirm
+                  </button>
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <div id="hide2" class="col-md-12">
+            <div class="pt-5">
+              <h3>All Products</h3>
+            </div>
+            <div id="row" class="row col-md-12 justify-content-center justify-content-md-between"></div>
+          </div>
+
+
+
+        </div>
+      </div>
+    </section>
+
+    <div class="pagination pagination-div bg-black d-flex justify-content-center pt-3">
+      <nav aria-label="Page navigation example">
+        <ul class="pagination" id="pagination">
+
+        </ul>
+      </nav>
+    </div>
+    <!-- Start Footer -->
+    <footer class="py-4 bg-black text-white">
+      <div class="container d-flex justify-content-between align-items-center">
+        <div class="d-flex footer-text">
+          <p>@Copyright 2022 - Stradate by El-Fankosh Team</p>
+        </div>
+
+        <div class="footer-i d-flex">
+
+          <div class="social"><i class="fab fa-facebook-f"></i></div>
+          <div class="social"><i class="fab fa-twitter"></i></div>
+          <div class="social"><i class="fab fa-instagram"></i></div>
+          <div class="social"><i class="fab fa-linkedin-in"></i></div>
+        </div>
+      </div>
+    </footer>
+    <!-- End Footer -->
+  </div>
+
+  <script src="https://kit.fontawesome.com/21cdd4de67.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+  <script src="js/userHome.js"></script>
+  <script src="js/session.js"></script>
+</body>
+
 </html>
