--- a/adminHome.html
+++ b/adminHome.html
@@ -8,13 +8,13 @@
   <title>Document</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/userHome.css" />
-  <link rel="stylesheet" href="css/navbar.css" />
+  <link rel="stylesheet" href="css/navbar.css">
 </head>
 
 <body class="bg-black">
   <div class="bg-black text-white">
     <!-- Start Navbar -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg ">
       <div class="container">
         <a href="index.html" class="navbar-brand">
           <!-- <img alt="" src="./images/icon.png" /> -->
@@ -26,10 +26,10 @@
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse text-center " id="navbarSupportedContent">
           <ul class="navbar-nav mb-2 mx-auto mb-lg-0 text-white">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="adminHome.html">Home</a>
+              <a class="nav-link " aria-current="page" href="adminHome.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="all_product.html">Products</a>
@@ -46,20 +46,37 @@
           </ul>
           <div class="d-flex align-items-center">
             <div>
-              <img id="user_img" src="" class="rounded-5" alt="" srcset="" width="40px" height="40px" />
+              <img id="user_img" src="" class="rounded-5" alt="" srcset="" width="40px" height="40px">
             </div>
             <span id="user_name" class="text-white mx-3 name"></span>
-            <button class="btn btn-primary" type="submit" id="log_out_btn">
-              Log Out
-            </button>
+            <button class="btn btn-primary" type="submit" id="log_out_btn">Log Out</button>
+            <!-- <div class="dropdown">
+                <button class="icon dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                </button>
+                <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton1">
+                  <button id="log_out_btn" class="btn "><a class="dropdown-item"href="#">Log out</a></li>
+                  
+                </div> -->
+            <!-- <div class="dropdown">
+                    <button class="icon dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                    </button>
+                    <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton1">
+                      <button class="btn "><a class="dropdown-item" href="#">Log out</a></li>
+                      
+                    </div>
+                </div> -->
+
+
+
           </div>
         </div>
       </div>
+
     </nav>
     <!-- search -->
     <section class="col-md-12">
       <div class="container">
-        <div class="d-flex justify-content-start py-5 w-50">
+        <div class="d-flex justify-content-start  py-5 w-50">
           <input onkeyup="search()" name="word" class="form-control" type="search" placeholder="Search"
             aria-label="Search" />
         </div>
@@ -67,8 +84,13 @@
         <div class="row col-md-12">
           <div class="container">
             <div class="row col-md-12">
-              <div class="row col-md-8 pt-4" id="search"></div>
-              <div class="col-md-4"></div>
+              <div class="row col-md-8 pt-4" id="search">
+
+              </div>
+              <div class="col-md-4">
+
+              </div>
+
             </div>
           </div>
         </div>
@@ -77,8 +99,8 @@
 
     <section>
       <div class="container">
-        <div class="col-md-12 row pb-5">
-          <div class="col-md-12" id="hide4">
+        <div class="col-md-12 row   pb-5">
+          <div class="col-md-12 " id="hide4">
             <div class="d-flex justify-content-start">
               <div class="col-md-4 mt-3">
                 <select id="select" class="form-select text-black fs-6 p-3 fw-normal"
@@ -87,13 +109,12 @@
                 </select>
               </div>
             </div>
+
           </div>
-          <div class="row col-md-12 py-5" style="min-height: 60vh">
-            <div class="table-div col-md-4 border mt-5">
-              <h4 class="text-black mt-3 fw-bold text-center add w-50 mx-auto pb-3">
-                Add To Cart
-              </h4>
-              <table class="table text-center mt-4" style="overflow-y: scroll">
+          <div class="row col-md-12 justify-content-end  py-5 mx-auto mx-md-0" style="min-height: 60vh;">
+            <div class="table-div col-md-4 border mt-5 ">
+              <h4 class="text-black mt-3 fw-bold text-center add w-50 mx-auto pb-3">Add To Cart</h4>
+              <table class="table text-center mt-4" style="overflow-y: scroll;">
                 <thead>
                   <tr>
                     <th scope="col">Name</th>
@@ -130,30 +151,37 @@
                 </div>
               </div>
             </div>
+
           </div>
           <div id="hide2" class="col-md-12">
             <div class="pt-5">
               <h3>All Products</h3>
             </div>
-            <div id="row" class="row col-md-12"></div>
+            <div id="row" class="row col-md-12 justify-content-center justify-content-md-between"></div>
           </div>
+
+
+
         </div>
       </div>
     </section>
 
     <div class="pagination pagination-div bg-black d-flex justify-content-center pt-3">
       <nav aria-label="Page navigation example">
-        <ul class="pagination" id="pagination"></ul>
+        <ul class="pagination" id="pagination">
+
+        </ul>
       </nav>
     </div>
     <!-- Start Footer -->
     <footer class="py-4 bg-black text-white">
       <div class="container d-flex justify-content-between align-items-center">
         <div class="d-flex footer-text">
-          <p>@Copyright 2022 - Stradate Target Team</p>
+          <p>@Copyright 2022 - Stradate by El-Fankosh Team</p>
         </div>
 
         <div class="footer-i d-flex">
+
           <div class="social"><i class="fab fa-facebook-f"></i></div>
           <div class="social"><i class="fab fa-twitter"></i></div>
           <div class="social"><i class="fab fa-instagram"></i></div>
